--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,7 +6,7 @@ button:focus {
   outline: none;
 }
 
-header {
+.header {
   background: #13505B;
   height: 150px;
   display: flex;
@@ -14,9 +14,10 @@ header {
   justify-content: center;
 }
 
-header h1 {
+.header h1 {
   color: white;
 }
+
 
 .container {
   margin-top: 30px;
@@ -74,4 +75,26 @@ header h1 {
 
 .not-parked {
   background: #00798C;
+}
+
+.parkingItem {
+  height: 183px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
+  border-radius: 4px;
+}
+
+.parkingItem p {
+  text-align: center;
+}
+
+.parkBtn {
+  background: #00798C;
+  color: white;
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
 }
